frontend/test/should_fail/exectype_AssignAttributeToVar3.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia ;> {f:foo=x.f} && {i:string=x.i}); // x.i is integer
	}
}